--- a/templates/details/vykony.html
+++ b/templates/details/vykony.html
@@ -1,5 +1,4 @@
-<main-popup>
-    <h1>Výkony</h1>
+<main-popup style="padding-top: 0px;">
 
     <table class="table-vykony" id="vykonyTable">
         <thead>
