--- a/templates/base.html
+++ b/templates/base.html
@@ -1,46 +1,61 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sk">
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}My App{% endblock %}</title>
+    <title>{% block title %}ADOcare{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
-    {% block styles %}{% endblock %}
-
-    <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
     
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;700&display=swap">
+    <!-- EXTERNAL -->
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Tai+Heritage+Pro:wght@400;700&display=swap" rel="stylesheet">
+
+    
+    <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    
+    <!-- maps -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    
+    <!-- flatpickr calendar -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="{{ url_for('static', filename='js/popup.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/details/doctors.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/create/doctors.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/details/diagnoses.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/create/macro.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/create/car.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/create/bodovanie.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/details/vykony.js') }}"></script>
+    
+
+    <!-- GLOBAL STYLES -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/tokens.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/inputs.css') }}">
+
+
+    <!-- PAGE STYLES -->
+    {% block styles %}{% endblock %}
+    
+    
+    <!-- GLOBAL SCRIPTS -->
+    <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/components/index.js') }}" type="module"></script>
+
+    
+    <!-- GLOBAL COMPONENTS -->
+    {% include "components/toasts.html" %}
+
 
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="navbar no-print">
             <div class="navbar-section">
         
-                <!-- Logo / Flower -->
                 <a href="{{ url_for('auth.logout') }}" class="navbar-button"
                     style="background-color: #5C9EAD; margin-right: 20px;" title="Domov">
                     <i style="color: #fff;" class="bi bi-flower2"></i>
                 </a>
         
-                <!-- Back button -->
                 <a href="#" class="navbar-button" id="backBtn" title="Späť">
                     <i style="color: #333;" class="bi bi-arrow-left"></i>
                 </a>
@@ -145,7 +160,6 @@
                         <div class="navbar-popup-item has-submenu" role="menuitem" aria-haspopup="true" aria-expanded="false">
                             <i class="bi bi-file-earmark"></i> Dokumenty
                         
-                            <!-- Second-level menu -->
                             <div class="navbar-submenu" role="menu" aria-label="Dokumenty odkazy">
                                 <a href="{{ url_for('documents.showNavrh') }}" class="navbar-submenu-item" role="menuitem" target="_blank">
                                     Návrh
@@ -173,37 +187,25 @@
             <div class="navbar-section">
                 {% if current_user.is_authenticated %}
                 {% if session.get('nurse')%}
-                <!-- Nurse profile -->
                 <a href="{{ url_for('nurse.update_nurse', id=session['nurse']['id']) }}" class="logo" title="Profil sestry" data-popup
                 data-popup-title="Zdravotný personál">
                     <h3 style="margin-right: 20px">{{ session['nurse']['meno'] }}</h3>
                 </a>
         
-                <!-- Switch -->
                 <a href="{{ url_for('main.index') }}" class="navbar-button" id="switch" title="Prepnúť používateľa">
                     <i style="color: #333;" class="bi bi-arrow-repeat"></i>
                 </a>
                 {% endif %}
         
-                <!-- Logout -->
                 <a class="navbar-button" href="{{ url_for('auth.logout') }}" title="Odhlásiť sa">
                     <i style="color: #333;" class="bi bi-box-arrow-right"></i>
                 </a>
                 {% endif %}
             </div>
         </div>
-        
-    </header>
+    </header> -->
 
-    <!-- generating path for keyboard shortcuts -->
-    <!-- // Ctrl Z - back button
-    // Ctrl D - domov (dashboard/
-    // CTRL A - Ados
-    // f1 - sestra
-    // f2 - pacient
-    // f3 - nastavenia
-    // f4 - odhlasit sa -->
-    <script>
+    <!-- <script>
         const dashboardUrl = "{{ url_for('main.dashboard') }}";
         const adosUrl = "{{ url_for('main.index') }}";
         const patientUrl = "{{ url_for('patient.list_patients') }}";
@@ -215,7 +217,7 @@
         {% else %}
             const nurseUrl = "";
         {% endif %}
-    </script>
+    </script> -->
 
     <main>
         {% block content %}{% endblock %}
@@ -223,7 +225,16 @@
 
     {% block scripts %}{% endblock %}
 
-    <div id="floating-popup" class="fp is-hidden" role="dialog" aria-modal="false" aria-hidden="true"
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            setTimeout(() => {
+                toast.success("Údaje boli úspešne uložené");
+            }, 500);
+        });
+    </script>
+
+
+    <!-- <div id="floating-popup" class="fp is-hidden" role="dialog" aria-modal="false" aria-hidden="true"
         aria-label="Plávajúce okno">
         <div class="fp__header" id="fpDragHandle">
             <div class="fp__title" id="fpTitle"></div>
@@ -236,8 +247,12 @@
         <div class="fp__body" id="fpBody" tabindex="0">
         </div>
         <div class="fp__resizer" id="fpResizer" title="Zmeniť veľkosť"></div>
-    </div>
-    
+    </div> -->
+    <footer>
+        <div class="footer no-print">
+            <p>© 2024 ADOcare - Všetky práva vyhradené.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
