--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <h1 class="text-heading-accent text-center">Vitajte 👋<br>
     Prihláste sa do svojho účtu.</h1>
 
-    {% call f.FieldGroup("Prihlásenie", width="500px", bg="var(--c-white)") %}
+    {% call f.FieldGroup("", width="500px", bg="var(--c-white)") %}
         {% call f.Row(cols=1) %}
         {{ f.Input(
         "prihlasovaci_kod",
